# iowa-rover

./: .gitmodules  README.md
kiosk/code/: README.md  hash-test.js
kiosk/code/ir-kiosk-radio-test/: SerialController.hpp  ir-kiosk-radio-test.ino  pins.h  radioserial.h  schedule.h
kiosk/code/irkiosk-eeprom-test/: irkiosk-eeprom-test.ino
kiosk/code/irkiosk-i2c-reset/: README.md  irkiosk-i2c-reset.ino
kiosk/code/irkiosk-main/: CMakeLists.txt  PolledSwitch.h  README.md  category.h  irkiosk-main.ino  lambda.h  ll.h  model.h  mvc.cpp  mvc.h  pins.h  programmer_buttons.cpp  programmer_buttons.h  programmer_controller.cpp  programmer_controller.h  programmer_leds.h  radioserial.h  rfid_monitor.cpp  rfid_monitor.h  rfid_reader.cpp  rfid_reader.h  scheduler.h  signal.h  slot.cpp  slot.h  sr_lamp.cpp  sr_lamp.h  test-suites.h  transmit.cpp  transmit.h
kiosk/code/irkiosk-main/Rfid/: Controller.h  HashSlot.h  HashSlot.test.cpp  HashTable.h  HashTable.test.cpp  ID12LA.h  Reader.h  Reader.ino  Tag.h  protocol.md
kiosk/code/irkiosk-main/kiosk/code/irkiosk-main/main/: EEPROM.h
kiosk/code/irkiosk-main/mock/: EEPROM.h  mock_impl.cpp
kiosk/code/irkiosk-main/programmer/: buttons.h  controller.h  leds.h
kiosk/code/irkiosk-main/test/: test-main.cpp
kiosk/code/irkiosk-rfid-attiny/: README.md  irkiosk-rfid-attiny.ino
kiosk/code/irkiosk-scheduler/: irkiosk-scheduler.ino
kiosk/electronics/: README.md
kiosk/electronics/iowa-rover-kiosk-bargraph/: iowa-rover-kiosk-bargraph.kicad_prl  iowa-rover-kiosk-bargraph.kicad_pro
kiosk/electronics/iowa-rover-kiosk-main/: fp-info-cache  (+7 more)
(+164 files in other folders)
